Revert those that might have potential issues